Oppdatert docker fil, trenger ikke kafka